--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.10.1",
     "lodash": "^4.17.11",
+    "tinify": "^1.6.0-beta.2",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
