--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "element-ui": "^2.10.1",
+    "element-ui": "2.4.11",
     "lodash": "^4.17.11",
     "tinify": "^1.6.0-beta.2",
     "vue": "^2.5.16",
@@ -69,6 +69,7 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
