--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "electron-json-storage": "^4.1.6",
     "element-ui": "2.4.11",
     "lodash": "^4.17.11",
     "tinify": "^1.6.0-beta.2",
