--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^1.0.1",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^15.2.4",
