--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "electron-json-storage": "^4.1.6",
     "element-ui": "2.4.11",
     "lodash": "^4.17.13",
+    "mkdirp": "^1.0.4",
     "moment": "^2.24.0",
     "tinify": "^1.6.0-beta.2",
     "vue": "^2.5.16",
